# url-shortener

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
.run/: Run API Server.run.xml  Web Run.run.xml
migration/src/: lib.rs  m20260421_000000_backfill_expires_at.rs  m20260422_000000_create_url_clicks_table.rs
server/: Cargo.toml  README.md
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_urls_table.rs  m20260421_172413_add_expires_at_to_urls.rs
server/src/middleware/: rate_limit.rs
server/src/models/: mod.rs  url.rs  url_click.rs
server/src/routes/: common.rs  mod.rs  redirect.rs
server/src/routes/api/: mod.rs
server/src/routes/api/v1/: mod.rs
server/src/routes/api/v1/urls/: analytics.rs  get_one.rs  list.rs  shorten.rs  update.rs
server/src/services/: mod.rs
server/src/services/url_shortner/: mod.rs
src/: config.rs  main.rs  state.rs
src/models/: url.rs
src/routes/: common.rs  mod.rs  redirect.rs
src/routes/api/v1/: mod.rs  shorten.rs
src/routes/api/v1/urls/: get_one.rs  list.rs  mod.rs  shorten.rs  update.rs
src/services/url_shortner/: mod.rs
tests/: test_rate_limit.sh
web/: README.md  pnpm-lock.yaml
