[workspace]
members = [".", "migration"]

[package]
name = "rust-url-shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
rand = "0.8"
dotenvy = "0.15"
migration = { path = "migration" }
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
